# SparseGF2

./: .gitignore  CHANGELOG.md  CITATION.cff  DOCS.md  GETTING_STARTED.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_full_clifford_group.py  benchmark_mipt_runtime.py  benchmark_stim_comparison.py  plot_comprehensive.py
benchmarks/results/: mipt_runtime_benchmark.json  stim_comparison.json
examples/: ex01_basic_simulation.py  ex02_stim_verification.py  ex03_mipt_sweep.py  ex04_graph_topologies.py
sanity_checks/: README.md  verify_per_step.py  verify_vs_stim.py
scripts/: generate_report.py  run_all_to_all_mipt.py
sparsegf2/: __init__.py
sparsegf2/analysis/: __init__.py  _numba_kernels.py  observables.py  single_ref.py  tanner_graph.py  weight_stats.py
sparsegf2/analysis_pipeline/: README.md  __init__.py  __main__.py  cli.py  config.py  orchestrator.py  registry.py  rehydrate.py
sparsegf2/circuits/: README.md  __init__.py  __main__.py  builder.py  cli.py  config.py  driver.py  graphs.py  matching.py  measurements.py  pictures.py  runner.py  validator.py  writer.py
sparsegf2/core/: __init__.py  (+6 more)
tests/: test_analysis_pipeline.py  test_apply_clifford_2q_inverse.py  test_circuits_end_to_end.py  test_circuits_graphs.py  test_circuits_matching_and_validator.py  test_circuits_stim_parity.py  test_compute_tmi_known_values.py  test_logical_weights_correctness.py  test_plotting.py  test_random_edge.py  test_round_robin.py  test_single_qubit_clifford_truth.py  test_single_ref.py  test_sparse_tableau_coverage.py  test_stim_rref_verification.py  test_surface_optimizations.py  test_until_purified.py  test_warmup_layers.py  validate_single_ref.py
(+22 files in other folders)
