[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsegf2"
version = "0.2.1"
description = "Sparse GF(2) stabilizer simulator for quantum error correction research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sam Bevins", email = "sjbevins64@gmail.com"},
]
keywords = [
    "quantum",
    "stabilizer",
    "clifford",
    "simulator",
    "quantum-error-correction",
    "measurement-induced-phase-transition",
    "gf2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
    "stim>=1.13",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
analysis = ["networkx>=3.0", "scipy>=1.10"]
circuits = ["pyarrow>=14.0", "h5py>=3.10", "polars>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["sparsegf2[plotting,analysis,circuits,dev]"]

[project.urls]
Repository = "https://github.com/sjbevins/SparseGF2"
Issues = "https://github.com/sjbevins/SparseGF2/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sparsegf2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--tb=short"
